@@ -10,6 +10,7 @@ setup(name='mlxtend',
                 'mlxtend.sklearn',
                 'mlxtend.matplotlib',
                 'mlxtend.classifier',
+                'mlxtend.regression',
                 'mlxtend.evaluate',
                 'mlxtend.preprocessing',
                 'mlxtend.math',
