@@ -2,6 +2,7 @@
 =======
 
 - Added `X_highlight` parameter to `mlxtend.evaluate.plot_decision_regions` for highlighting test data points.
+- Added mlxtend.regression.lin_regplot to plot the fitted line from linear regression.
 
 0.2.4
 =======
